View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028223 | Open CASCADE | OCCT:Modeling Algorithms | public | 2016-12-15 11:30 | 2017-09-29 16:31 |
Reporter | jgv | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028223: Projection of closed curve onto cylinder is wrong | ||||
Description | ProjLib_ProjectedCurve algorithm builds wrong curve because of setting of wrong restrictions in U direction on the cylinder (whereas there are no restrictions in V direction). May be the same problem takes place on other types of surfaces. See modification in the branch. | ||||
Steps To Reproduce | test bugs modalg_6 bug28223 | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_6 bug28223 | ||||
|
Branch CR28223 has been created by jgv. SHA-1: e310289d84e4466ade108888ffb732b2f0e38d5d Detailed log of new commits: Author: jgv Date: Thu Dec 15 11:53:08 2016 +0300 Possible solution. |
|
Branch CR28223 has been updated forcibly by ifv. SHA-1: 462694de280769456ab23ca3acdf7578a11df6f0 |
|
Branch CR28223 is ready for review |
|
Please extract computation of number of points into a separate function to avoid code duplication. |
|
Branch CR28223 has been updated forcibly by ifv. SHA-1: 15f817cbe7944cf2a9c5e6f2668a972ab584610e |
|
CR28223 is updated according to remarks |
|
Please create the test case. |
|
bug28223_face.brep (27,235 bytes) |
|
Branch CR28223 has been updated forcibly by ifv. SHA-1: 9d39fc5ba7f713c0c5072d370da06d8837832dd6 |
|
Test case added |
|
Reviewed. |
|
Branch CR28223 has been updated forcibly by apv. SHA-1: d179023c4265b2d9deb8b07b627f1d6b0bfbf28a |
|
Branch CR28223 has been rebased on the current master |
|
Dear BugMaster, Branch CR28223 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: d179023c4265b2d9deb8b07b627f1d6b0bfbf28a Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 63 Windows: 0 MacOS: 1127 Regressions/Differences: Not detected Testing cases: bugs modalg_6 bug28223 - OK http://occt-tests/CR28223-master-OCCT/Debian70-64/bugs/modalg_6/bug28223.html http://occt-tests/CR28223-master-OCCT/Windows-64-VC10/bugs/modalg_6/bug28223.html Testing on Linux: Total MEMORY difference: 93176482 / 93054593 [+0.13%] Total CPU difference: 21546.080000000125 / 21520.56000000037 [+0.12%] Testing on Windows: Total MEMORY difference: 58628059 / 58650770 [-0.04%] Total CPU difference: 19356.74448089858 / 19731.318481998722 [-1.90%] |
|
Branch CR28223 has been deleted by kgv. SHA-1: d179023c4265b2d9deb8b07b627f1d6b0bfbf28a |
occt: master 0a40a30d 2016-12-16 11:26:42 Committer: apn Details Diff |
0028223: Projection of closed curve onto cylinder is wrong Algorithm of calculation UV bounds of projected curve for periodic surfaces is modified. |
Affected Issues 0028223 |
|
mod - src/ProjLib/ProjLib_ComputeApprox.cxx | Diff File | ||
add - tests/bugs/modalg_6/bug28223 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-12-15 11:30 | jgv | New Issue | |
2016-12-15 11:30 | jgv | Assigned To | => msv |
2016-12-15 11:30 | jgv | File Added: cyl_face.brep | |
2016-12-15 11:53 | git | Note Added: 0061681 | |
2016-12-15 14:37 | msv | Assigned To | msv => ifv |
2016-12-15 14:37 | msv | Status | new => assigned |
2016-12-15 14:37 | msv | Product Version | => 7.1.0 |
2016-12-19 13:34 | git | Note Added: 0061852 | |
2016-12-19 13:36 | ifv | Note Added: 0061853 | |
2016-12-19 13:36 | ifv | Assigned To | ifv => msv |
2016-12-19 13:36 | ifv | Status | assigned => resolved |
2016-12-19 16:47 | msv | Note Added: 0061873 | |
2016-12-19 16:47 | msv | Assigned To | msv => ifv |
2016-12-19 16:47 | msv | Status | resolved => assigned |
2016-12-20 10:33 | git | Note Added: 0061890 | |
2016-12-20 10:34 | ifv | Note Added: 0061891 | |
2016-12-20 10:34 | ifv | Assigned To | ifv => msv |
2016-12-20 10:34 | ifv | Status | assigned => resolved |
2016-12-21 10:50 | msv | Note Added: 0061937 | |
2016-12-21 10:50 | msv | Assigned To | msv => ifv |
2016-12-21 10:50 | msv | Status | resolved => assigned |
2016-12-22 13:58 | ifv | File Added: bug28223_face.brep | |
2016-12-22 13:59 | ifv | File Deleted: cyl_face.brep | |
2016-12-22 13:59 | ifv | Steps to Reproduce Updated | |
2016-12-22 14:01 | git | Note Added: 0062004 | |
2016-12-22 14:03 | ifv | Note Added: 0062005 | |
2016-12-22 14:03 | ifv | Assigned To | ifv => msv |
2016-12-22 14:03 | ifv | Status | assigned => resolved |
2016-12-22 14:03 | ifv | Steps to Reproduce Updated | |
2016-12-23 09:35 | msv | Note Added: 0062042 | |
2016-12-23 09:35 | msv | Assigned To | msv => bugmaster |
2016-12-23 09:35 | msv | Status | resolved => reviewed |
2016-12-23 12:04 |
|
Assigned To | bugmaster => apv |
2016-12-23 17:04 | git | Note Added: 0062072 | |
2016-12-23 17:04 |
|
Note Added: 0062073 | |
2016-12-26 10:37 |
|
Test case number | => bugs modalg_6 bug28223 |
2016-12-26 10:37 |
|
Steps to Reproduce Updated | |
2016-12-26 12:31 |
|
Assigned To | apv => bugmaster |
2016-12-26 12:31 |
|
Status | reviewed => tested |
2016-12-26 12:32 |
|
Note Added: 0062114 | |
2016-12-30 18:08 | apn | Changeset attached | => occt master 0a40a30d |
2016-12-30 18:08 | apn | Assigned To | bugmaster => apn |
2016-12-30 18:08 | apn | Status | tested => verified |
2016-12-30 18:08 | apn | Resolution | open => fixed |
2017-02-08 11:32 | git | Note Added: 0063563 | |
2017-09-29 16:21 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:31 |
|
Status | verified => closed |