0028223: Projection of closed curve onto cylinder is wrong

Algorithm of calculation UV bounds of projected curve for periodic surfaces is modified.